--- a/lib/l10n/intl_ca.arb
+++ b/lib/l10n/intl_ca.arb
@@ -52,5 +52,44 @@
   "top": "Millor",
   "chat": "Xat",
   "admin": "administrador",
-  "by": "per"
+  "by": "per",
+  "not_an_admin": "No és un administrador.",
+  "couldnt_find_post": "No s’ha pogut trobar l’apunt.",
+  "not_logged_in": "No heu iniciat una sessió.",
+  "site_ban": "Us han expulsat del lloc",
+  "community_ban": "Us han expulsat d’aquesta comunitat.",
+  "downvotes_disabled": "Vots negatius inhabilitats",
+  "locked": "blocat",
+  "couldnt_create_comment": "No s’ha pogut crear el comentari.",
+  "couldnt_like_comment": "No s’ha pogut donar «m’agrada» al comentari.",
+  "couldnt_update_comment": "No s’ha pogut actualitzar el comentari.",
+  "no_comment_edit_allowed": "No teniu permisos per a editar el comentari.",
+  "couldnt_save_comment": "No s’ha pogut desar el comentari.",
+  "couldnt_get_comments": "No s’han pogut recuperar els comentaris.",
+  "couldnt_create_post": "No s’ha pogut crear l’apunt.",
+  "couldnt_like_post": "No s’ha pogut donar «m’agrada» a l’apunt.",
+  "couldnt_find_community": "No s’ha pogut trobar la comunitat.",
+  "couldnt_get_posts": "No s’han pogut recuperar els apunts",
+  "no_post_edit_allowed": "No teniu permisos per a editar l’apunt.",
+  "couldnt_save_post": "No s’ha pogut desar l’apunt.",
+  "site_already_exists": "El lloc ja existeix.",
+  "couldnt_update_site": "No s’ha pogut actualitzar el lloc.",
+  "invalid_community_name": "El nom no és vàlid.",
+  "community_already_exists": "Aquesta comunitat ja existeix.",
+  "community_moderator_already_exists": "Aquest moderador de la comunitat ja existeix.",
+  "community_follower_already_exists": "Aquest seguidor de la comunitat ja existeix.",
+  "couldnt_update_community": "No s’ha pogut actualitzar la comunitat.",
+  "no_community_edit_allowed": "No teniu permisos per a editar la comunitat.",
+  "system_err_login": "Error del sistema. Intenti tancar sessió i ingressar de nou.",
+  "community_user_already_banned": "Aquest usuari de la comunitat ja fou expulsat.",
+  "couldnt_find_that_username_or_email": "No s’ha pogut trobar aquest nom de usuari o adreça electrònica.",
+  "password_incorrect": "Contrasenya incorrecta.",
+  "registration_closed": "S’han tancat els registres",
+  "passwords_dont_match": "Les contrasenyes no coincideixen.",
+  "invalid_username": "El nom d’usuari no és vàlid.",
+  "couldnt_update_user": "No s’ha pogut actualitzar l’usuari.",
+  "couldnt_update_private_message": "No s’ha pogut actualitzar el missatge privat.",
+  "couldnt_update_post": "No s’ha pogut actualitzar l’apunt",
+  "couldnt_create_private_message": "No s’ha pogut crear el missatge privat.",
+  "no_private_message_edit_allowed": "No teniu permisos per a editar el missatge privat."
 }
