--- a/lib/l10n/intl_de.arb
+++ b/lib/l10n/intl_de.arb
@@ -53,5 +53,50 @@
   "top": "Top",
   "chat": "Chat",
   "admin": "Administrator",
-  "by": "von"
+  "by": "von",
+  "not_an_admin": "Kein Administrator.",
+  "couldnt_find_post": "Konnte Beitrag nicht finden.",
+  "not_logged_in": "Nicht eingeloggt.",
+  "site_ban": "Du wurdest von dieser Seite gebannt",
+  "community_ban": "Du wurdest von dieser Community gebannt.",
+  "downvotes_disabled": "Downvotes deaktiviert",
+  "invalid_url": "Ungültige URL.",
+  "locked": "gesperrt",
+  "couldnt_create_comment": "Konnte Kommentar nicht anlegen.",
+  "couldnt_like_comment": "Konnte nicht liken.",
+  "couldnt_update_comment": "Konnte Kommentar nicht aktualisieren.",
+  "no_comment_edit_allowed": "Keine Erlaubnis Kommentar zu editieren.",
+  "couldnt_save_comment": "Konnte Kommentar nicht speichern.",
+  "couldnt_get_comments": "Konnte Kommentare nicht laden.",
+  "invalid_post_title": "Ungültiger Post Titel",
+  "couldnt_create_post": "Konnte Beitrag nicht anlegen.",
+  "couldnt_like_post": "Konnte Beitrag nicht liken.",
+  "couldnt_find_community": "Konnte Community nicht finden.",
+  "couldnt_get_posts": "Konnte Beiträge nicht holen",
+  "no_post_edit_allowed": "Keine Erlaubnis Beitrag zu editieren.",
+  "couldnt_save_post": "Konnte Beitrag nicht speichern.",
+  "site_already_exists": "Seite existiert bereits.",
+  "couldnt_update_site": "Konnte Seite nicht aktualisieren.",
+  "invalid_community_name": "Ungültiger Name.",
+  "community_already_exists": "Die Community existiert bereits.",
+  "community_moderator_already_exists": "Community-Moderator*in existiert bereits.",
+  "community_follower_already_exists": "Community-Abonnent*in existiert bereits.",
+  "not_a_moderator": "Kein Moderator.",
+  "couldnt_update_community": "Konnte die Community nicht aktualisieren.",
+  "no_community_edit_allowed": "Keine Erlaubnis, die Community zu editieren.",
+  "system_err_login": "Systemfehler. Versuche dich aus- und wieder einzuloggen.",
+  "community_user_already_banned": "Der*die Community-Benutzer*in ist schon gebannt.",
+  "couldnt_find_that_username_or_email": "Konnte Username oder E-Mail nicht finden.",
+  "password_incorrect": "Passwort falsch.",
+  "registration_closed": "Registrierung geschlossen",
+  "invalid_password": "Ungültiges Passwort. Das Passwort muss <= 60 Zeichen enthalten.",
+  "passwords_dont_match": "Passwörter stimmen nicht überein.",
+  "captcha_incorrect": "Das Captcha ist inkorrekt.",
+  "invalid_username": "Ungültiger Benutzername.",
+  "bio_length_overflow": "Die Benutzerbiographie darf nicht länger als 300 Zeichen sein.",
+  "couldnt_update_user": "Konnte Nutzer nicht aktualisieren.",
+  "couldnt_update_private_message": "Konnte Privatnachricht nicht aktualisieren.",
+  "couldnt_update_post": "Konnte Beitrag nicht aktualisieren",
+  "couldnt_create_private_message": "Konnte Privatnachricht nicht erstelllen.",
+  "no_private_message_edit_allowed": "Editieren der Privatnachricht nicht erlaubt."
 }
