--- a/lib/l10n/intl_eu.arb
+++ b/lib/l10n/intl_eu.arb
@@ -53,5 +53,54 @@
   "top": "Bozkatuenak",
   "chat": "Txata",
   "admin": "administratzailea",
-  "by": "egilea:"
+  "by": "egilea:",
+  "not_an_admin": "Ez zara administratzailea.",
+  "couldnt_find_post": "Ezin izan da bidalketarik aurkitu.",
+  "not_logged_in": "Ez duzu saiorik hasi.",
+  "site_ban": "Gune honetan sartzea debekatu dizute",
+  "community_ban": "Komunitate honetan sartzea debekatu dizute.",
+  "downvotes_disabled": "Kontrako bozkak desgaituta",
+  "invalid_url": "URL baliogabea.",
+  "locked": "blokeatuta",
+  "couldnt_create_comment": "Ezin izan da iruzkina sortu.",
+  "couldnt_like_comment": "Ezin izan da iruzkinari datsegit eman.",
+  "couldnt_update_comment": "Ezin izan da iruzkina eguneratu.",
+  "no_comment_edit_allowed": "Ezin duzu iruzkina editatu.",
+  "couldnt_save_comment": "Ezin izan da iruzkina gorde.",
+  "couldnt_get_comments": "Ezin izan da iruzkinik lortu.",
+  "report_reason_required": "Salaketaren arrazoia ezinbestekoa da.",
+  "report_too_long": "Salaketa luzeegia.",
+  "couldnt_create_report": "Ezin izan da salaketa sortu.",
+  "couldnt_resolve_report": "Ezin izan da salaketa itxi.",
+  "invalid_post_title": "Bidalketa izenburu baliogabea",
+  "couldnt_create_post": "Ezin izan da bidalketa sortu.",
+  "couldnt_like_post": "Ezin izan da bidalketari datsegit eman.",
+  "couldnt_find_community": "Ezin izan da komunitaterik aurkitu.",
+  "couldnt_get_posts": "Ezin izan da bidalketa lortu",
+  "no_post_edit_allowed": "Ezin duzu bidalketa editatu.",
+  "couldnt_save_post": "Ezin izan da bidalketa gorde.",
+  "site_already_exists": "Gunea dagoeneko existitzen da.",
+  "couldnt_update_site": "Ezin izan da gunea eguneratu.",
+  "invalid_community_name": "Izen baliogabea.",
+  "community_already_exists": "Komunitate hori dagoeneko existitzen da.",
+  "community_moderator_already_exists": "Komunitateko moderatzaile hori dagoeneko existitzen da.",
+  "community_follower_already_exists": "Komunitateko jarraitzaile hori dagoeneko existitzen da.",
+  "not_a_moderator": "Ez zara moderatzailea.",
+  "couldnt_update_community": "Ezin izan da komunitatea eguneratu.",
+  "no_community_edit_allowed": "Ezin duzu komunitatea editatu.",
+  "system_err_login": "Sistemaren errorea. Saiatu saioa ixten eta berriz hasten.",
+  "community_user_already_banned": "Komunitateko erabiltzaile hau dagoeneko debekatuta dago.",
+  "couldnt_find_that_username_or_email": "Ezin izan da aurkitu erabiltzaile-izen edo eposta hori.",
+  "password_incorrect": "Pasahitz okerra.",
+  "registration_closed": "Izen-ematea itxira",
+  "invalid_password": "Pasahitz baliogabea. Pasahitzak <= 60 karaktere izan behar ditu.",
+  "passwords_dont_match": "Pasahitzak ez dira berdinak.",
+  "captcha_incorrect": "Okerreko captcha.",
+  "invalid_username": "Erabiltzaile-izen baliogabea.",
+  "bio_length_overflow": "Erabiltzailearen biografiak ezin ditu 300 hizki baino gehiago izan.",
+  "couldnt_update_user": "Ezin izan da erabiltzailea eguneratu.",
+  "couldnt_update_private_message": "Ezin izan da mezu pribatu hori eguneratu.",
+  "couldnt_update_post": "Ezin izan da bidalketa eguneratu",
+  "couldnt_create_private_message": "Ezin izan da mezu pribatu hori sortu.",
+  "no_private_message_edit_allowed": "Ezin duzu mezu pribaturik editatu."
 }
