--- a/lib/l10n/intl_fa.arb
+++ b/lib/l10n/intl_fa.arb
@@ -35,5 +35,35 @@
   "new_": "تازه",
   "top": "بالاترین",
   "chat": "گپ",
-  "admin": "مدیر"
+  "admin": "مدیر",
+  "not_an_admin": "مدیر نیستید.",
+  "couldnt_find_post": "ناتوانی در یافتن مطلب.",
+  "not_logged_in": "وارد نشده‌اید.",
+  "site_ban": "فعالیت شما در این پایگاه ممنوع شده است",
+  "community_ban": "فعالیت شما در این جامعه ممنوع شده است.",
+  "downvotes_disabled": "رای پایین غیرفعال است",
+  "locked": "قفل شد",
+  "couldnt_create_comment": "ناتوانی در ایجاد نظر.",
+  "couldnt_like_comment": "ناتوانی در پسنیدن نظر.",
+  "couldnt_update_comment": "ناتوانی در به‌روزرسانی نظر.",
+  "no_comment_edit_allowed": "مجاز به ویرایش نظر نیستید.",
+  "couldnt_save_comment": "ناتوانی در ذخیره نظر.",
+  "couldnt_create_post": "ناتوانی در ایجاد مطلب.",
+  "couldnt_like_post": "ناتوانی در پسندیدن مطلب.",
+  "couldnt_find_community": "ناتوانی در یافتن جامعه.",
+  "couldnt_get_posts": "ناتوانی در دریافت مطالب",
+  "no_post_edit_allowed": "مجاز به ویرایش مطلب نیستید.",
+  "couldnt_save_post": "ناتوانی در ذخیره مطلب.",
+  "site_already_exists": "این پایگاه از قبل وجود داشته است.",
+  "couldnt_update_site": "ناتوانی در به‌روزرسانی پایگاه.",
+  "community_already_exists": "این جامعه از قبل وجود داشته است.",
+  "couldnt_update_community": "ناتوانی در به‌روزرسانی جامعه.",
+  "no_community_edit_allowed": "مجاز به ویرایش جامعه نیستید.",
+  "system_err_login": "خطای سامانه. سعی کنید خارج شده و دوباره وارد شوید.",
+  "couldnt_find_that_username_or_email": "ناتوانی در یافتن این نام کاربری یا رایانامه.",
+  "password_incorrect": "گذرواژه نادرست.",
+  "registration_closed": "نام‌نویسی بسته است",
+  "passwords_dont_match": "گذرواژه‌ها با هم منطبق نیستند.",
+  "couldnt_update_user": "ناتوانی در به‌روزرسانی کاربر.",
+  "couldnt_update_post": "ناتوای در به‌روزرسانی مطلب"
 }
