--- a/lib/l10n/intl_fi.arb
+++ b/lib/l10n/intl_fi.arb
@@ -49,5 +49,43 @@
   "top": "Parhaimmat",
   "chat": "Chat",
   "admin": "ylläpitäjä",
-  "by": "käyttäjältä"
+  "by": "käyttäjältä",
+  "not_an_admin": "Ei ole ylläpitäjä.",
+  "couldnt_find_post": "Viestiä ei löytynyt.",
+  "not_logged_in": "Ei kirjautunut sisään.",
+  "site_ban": "Sinut on asetettu porttikieltoon tällä sivustolla",
+  "community_ban": "Sinulle on asetettu porttikielto tähän yhteisöön.",
+  "downvotes_disabled": "Alaäänet otettu pois päältä",
+  "locked": "lukittu",
+  "couldnt_create_comment": "Kommenttia ei pystytty luomaan.",
+  "couldnt_like_comment": "Kommentista ei voitu tykätä.",
+  "couldnt_update_comment": "Kommenttia ei voitu päivittää.",
+  "no_comment_edit_allowed": "Sinulla ei ole oikeutta muokata kommenttia.",
+  "couldnt_save_comment": "Kommenttia ei voitu tallentaa.",
+  "couldnt_get_comments": "Kommentteja ei voitu hakea.",
+  "invalid_post_title": "Väärä viestin otsikko",
+  "couldnt_create_post": "Ei voitu luoda viestiä.",
+  "couldnt_like_post": "Viestistä ei voitu tykätä.",
+  "couldnt_find_community": "Yhteisöä ei voitu löytää.",
+  "couldnt_get_posts": "Viestejä ei saatu",
+  "no_post_edit_allowed": "Sinulla ei ole oikeutta muokata viestiä.",
+  "couldnt_save_post": "Viestiä ei voitu tallentaa.",
+  "site_already_exists": "Sivusto on jo olemassa.",
+  "couldnt_update_site": "Sivustoa ei voitu päivittää.",
+  "community_already_exists": "Yhteisö on jo olemassa.",
+  "community_moderator_already_exists": "Yhteisön moderaattori on jo olemassa.",
+  "community_follower_already_exists": "Yhteisön seuraaja on jo olemassa.",
+  "couldnt_update_community": "Yhteisöä ei voitu päivittää.",
+  "no_community_edit_allowed": "Sinulla ei ole oikeutta muokata yhteisöä.",
+  "system_err_login": "Järjestelmävirhe. Yritä kirjautua ulos ja kirjautua uudestaan sisään.",
+  "community_user_already_banned": "Yhteisön käyttäjä on jo porttikiellossa.",
+  "couldnt_find_that_username_or_email": "Käyttäjänimeä tai sähköpostia ei onnistuttu löytämään.",
+  "password_incorrect": "Salasana on väärin.",
+  "registration_closed": "Rekisteröityminen suljettu",
+  "passwords_dont_match": "Salasanat eivät täsmää.",
+  "couldnt_update_user": "Käyttäjää ei voitu päivittää.",
+  "couldnt_update_private_message": "Yksityisviestiä ei voitu päivittää.",
+  "couldnt_update_post": "Viestiä ei voitu päivittää",
+  "couldnt_create_private_message": "Yksityisviestiä ei voitu luoda.",
+  "no_private_message_edit_allowed": "Sinulla ei ole oikeutta muokata yksityisviestiä."
 }
