--- a/lib/l10n/intl_it.arb
+++ b/lib/l10n/intl_it.arb
@@ -53,5 +53,54 @@
   "top": "Migliori",
   "chat": "Chat",
   "admin": "amministratore",
-  "by": "di"
+  "by": "di",
+  "not_an_admin": "Non un amministratore.",
+  "couldnt_find_post": "Impossibile trovare la pubblicazione.",
+  "not_logged_in": "Non hai effettuato l'accesso.",
+  "site_ban": "Sei stato escluso dal sito",
+  "community_ban": "Sei stato escluso da questa comunità.",
+  "downvotes_disabled": "Voti negativi disabilitati",
+  "invalid_url": "URL non valido.",
+  "locked": "bloccato",
+  "couldnt_create_comment": "Impossibile creare il commento.",
+  "couldnt_like_comment": "Impossibile apprezzare il commento.",
+  "couldnt_update_comment": "Impossibile aggiornare il commento.",
+  "no_comment_edit_allowed": "Non sei autorizzato a modificare il commento.",
+  "couldnt_save_comment": "Impossibile salvare il commento.",
+  "couldnt_get_comments": "Impossibile ottenere i commenti.",
+  "report_reason_required": "Motivazione della segnalazione obbligatoria.",
+  "report_too_long": "Segnalazione troppo lunga.",
+  "couldnt_create_report": "Impossibile creare segnalazione.",
+  "couldnt_resolve_report": "Impossibile risolvere segnalazione.",
+  "invalid_post_title": "Titolo della pubblicazione non valido",
+  "couldnt_create_post": "Impossibile creare la pubblicazione.",
+  "couldnt_like_post": "Impossibile apprezzare la pubblicazione.",
+  "couldnt_find_community": "Impossibile trovare la comunità.",
+  "couldnt_get_posts": "Impossibile recuperare le pubblicazioni",
+  "no_post_edit_allowed": "Non sei autorizzato a modificare la pubblicazione.",
+  "couldnt_save_post": "Impossibile salvare la pubblicazione.",
+  "site_already_exists": "Il sito esiste già.",
+  "couldnt_update_site": "Impossibile aggiornare il sito.",
+  "invalid_community_name": "Nome non valido.",
+  "community_already_exists": "La comunità esiste già.",
+  "community_moderator_already_exists": "Questo utente è già moderatore della comunità.",
+  "community_follower_already_exists": "Utente già membro della comunità.",
+  "not_a_moderator": "Non moderatore.",
+  "couldnt_update_community": "Impossibile aggiornare la comunità.",
+  "no_community_edit_allowed": "Non sei autorizzato a modificare la comunità.",
+  "system_err_login": "Si è verificato un errore. Prova ad effettuare nuovamente l'accesso.",
+  "community_user_already_banned": "L'utente della comunità è già stato espulso.",
+  "couldnt_find_that_username_or_email": "Il nome utente o l'email non sono stati trovati.",
+  "password_incorrect": "Password non corretta.",
+  "registration_closed": "Registrazione Chiusa",
+  "invalid_password": "Password non valida. La password deve contenere <= 60 caratteri.",
+  "passwords_dont_match": "Le password non corrispondono.",
+  "captcha_incorrect": "Captcha errato.",
+  "invalid_username": "Nome utente non valido.",
+  "bio_length_overflow": "La descrizione non può superare i 300 caratteri.",
+  "couldnt_update_user": "Impossibile aggiornare l'utente.",
+  "couldnt_update_private_message": "Impossibile aggiornare un messaggio privato.",
+  "couldnt_update_post": "Impossibile aggiornare la pubblicazione",
+  "couldnt_create_private_message": "Impossibile creare un messaggio privato.",
+  "no_private_message_edit_allowed": "Non hai i permessi per modificare un messaggio privato."
 }
