--- a/lib/l10n/intl_ja.arb
+++ b/lib/l10n/intl_ja.arb
@@ -52,5 +52,43 @@
   "top": "トップ",
   "chat": "会話",
   "admin": "管理者",
-  "by": "投稿者"
+  "by": "投稿者",
+  "not_an_admin": "管理者ではありません。",
+  "couldnt_find_post": "投稿が見付かりません。",
+  "not_logged_in": "ログインしていません。",
+  "site_ban": "サイトへのアクセスを禁止されています",
+  "community_ban": "このコミュニティへのアクセスを禁止されています。",
+  "downvotes_disabled": "反対票を無効化",
+  "locked": "凍結中",
+  "couldnt_create_comment": "投稿を作成できませんでした。",
+  "couldnt_like_comment": "コメントが「いいね」できない。",
+  "couldnt_update_comment": "コメントが更新されない。",
+  "no_comment_edit_allowed": "コメントの編集権限がありません。",
+  "couldnt_save_comment": "コメントが保存されない。",
+  "couldnt_get_comments": "コメントが取得されない。",
+  "couldnt_create_post": "投稿ができない。",
+  "couldnt_like_post": "投稿が「いいね」できない。",
+  "couldnt_find_community": "コミュニティが見付かりません。",
+  "couldnt_get_posts": "投稿が取得できない",
+  "no_post_edit_allowed": "投稿の編集権限がありません。",
+  "couldnt_save_post": "投稿が保存されない。",
+  "site_already_exists": "サイトは既に存在します。",
+  "couldnt_update_site": "サイトが更新されない。",
+  "community_already_exists": "コミュニティは既に存在します。",
+  "community_moderator_already_exists": "コミュニティ管理人は既に存在します。",
+  "community_follower_already_exists": "コミュニティフォロワーは既に存在します。",
+  "couldnt_update_community": "コミュニティが更新されない。",
+  "no_community_edit_allowed": "コミュニティの編集許可がありません。",
+  "system_err_login": "システムエラーが発生しました。一度ログアウトして、再度ログインをお試しください。",
+  "community_user_already_banned": "コミュニティユーザーは既に禁止されています。",
+  "couldnt_find_that_username_or_email": "ユーザー名またはメールアドレスが見付かりません。",
+  "password_incorrect": "パスワードが不正です。",
+  "registration_closed": "登録は受け付けていません",
+  "passwords_dont_match": "パスワードが一致しません。",
+  "bio_length_overflow": "自己紹介は 300 文字までです。",
+  "couldnt_update_user": "ユーザーが更新されない。",
+  "couldnt_update_private_message": "プライベートメッセージが更新されない。",
+  "couldnt_update_post": "投稿が更新されない",
+  "couldnt_create_private_message": "プライベートメッセージが作成されない。",
+  "no_private_message_edit_allowed": "プライベートメッセージの編集許可がありません。"
 }
