--- a/lib/l10n/intl_ka.arb
+++ b/lib/l10n/intl_ka.arb
@@ -49,5 +49,39 @@
   "top": "ტოპ",
   "chat": "ჩეტი",
   "admin": "ადმინი",
-  "by": "by"
+  "by": "by",
+  "not_an_admin": "ადმინი არ არის",
+  "couldnt_find_post": "პოსტი ვერ მოიძებნა.",
+  "not_logged_in": "შასული არ ხართ",
+  "site_ban": "საიტიდან გაშავებული ხარ.",
+  "community_ban": "შენ ამ თემისგან გაშავებული ხარ.",
+  "downvotes_disabled": "არმოწონები გამორთულია",
+  "locked": "ჩაკეტილი",
+  "couldnt_create_comment": "კომენტარის შექმნა ვერ მოხერხდა.",
+  "couldnt_like_comment": "კომენტარის მოწონება ვერ მოხერხდა.",
+  "couldnt_update_comment": "კომენტარის განახლება ვერ მოხერხდა.",
+  "no_comment_edit_allowed": "კომენტარის რედაკტირება არ შეიძლება.",
+  "couldnt_save_comment": "კომენტარის შენახვა ვერ მოხერხდა.",
+  "couldnt_get_comments": "კომენტარების ნახვა ვერ მოხერხდა.",
+  "couldnt_create_post": "პოსტი ვერ შეიქმნა.",
+  "couldnt_like_post": "პოსტის მოწონება ვერ მოხერხდა.",
+  "couldnt_find_community": "ტემა არ მოიძებნა.",
+  "couldnt_get_posts": "პოსტები არ არის.",
+  "no_post_edit_allowed": "პოსტის რედაკტირება არ შეიძლება.",
+  "couldnt_save_post": "პოსტის დასეივება ვერ მოხერხდა.",
+  "site_already_exists": "Site already exists.",
+  "couldnt_update_site": "Couldn't update site.",
+  "community_already_exists": "ეს თემა უკვე არსებობს.",
+  "community_moderator_already_exists": "ამ თემის მოდერატორი უკვე არსებობს.",
+  "community_follower_already_exists": "თემის ფოლოვორი უკვე არსებობს.",
+  "couldnt_update_community": "თემა ვერ განახლდა.",
+  "no_community_edit_allowed": "თემის რედაკტირება არ შეიძლება.",
+  "system_err_login": "ერორი.  თავიდან შემოსვლა ცადეთ.",
+  "community_user_already_banned": "თემის მომხმარებელი უკვე შავ სიაშია.",
+  "couldnt_find_that_username_or_email": "სახელი ან ელ-პოსტა ვერ მოიძებნა.",
+  "password_incorrect": "პაროლი არასწორია .",
+  "registration_closed": "რეგისტრაცია დახურულია",
+  "passwords_dont_match": "პაროლები იგივი არ არის.",
+  "couldnt_update_user": "მომხმარებლის განახლება ვერ მოხერხდა.",
+  "couldnt_update_post": "პოსტი ვერ განახლდა"
 }
