--- a/lib/l10n/intl_nl.arb
+++ b/lib/l10n/intl_nl.arb
@@ -49,5 +49,44 @@
   "top": "Top",
   "chat": "Praat",
   "admin": "beheerder",
-  "by": "door"
+  "by": "door",
+  "not_an_admin": "Niet een beheerder.",
+  "couldnt_find_post": "Kon post niet vinden.",
+  "not_logged_in": "Niet ingelogd.",
+  "site_ban": "Je bent verbannen van deze site",
+  "community_ban": "Je bent verbannen uit deze community.",
+  "downvotes_disabled": "Downvotes geblokkeerd",
+  "locked": "gesloten",
+  "couldnt_create_comment": "Kon reactie niet maken.",
+  "couldnt_like_comment": "Kon reactie niet leuk vinden.",
+  "couldnt_update_comment": "Kon reactie niet bijwerken.",
+  "no_comment_edit_allowed": "Niet toegestaan om reactie te bewerken.",
+  "couldnt_save_comment": "Kon reactie niet opslaan.",
+  "couldnt_get_comments": "Kon reacties niet ophalen.",
+  "couldnt_create_post": "Kon post niet maken.",
+  "couldnt_like_post": "Kon post niet leuk vinden.",
+  "couldnt_find_community": "Kon community niet vinden.",
+  "couldnt_get_posts": "Kon posts niet ophalen",
+  "no_post_edit_allowed": "Niet toegestaan om posts te bewerken.",
+  "couldnt_save_post": "Kon post niet opslaan.",
+  "site_already_exists": "Site bestaat al.",
+  "couldnt_update_site": "Kon site niet bijwerken.",
+  "invalid_community_name": "Ongeldige naam.",
+  "community_already_exists": "Community bestaat al.",
+  "community_moderator_already_exists": "Community-moderator bestaat al.",
+  "community_follower_already_exists": "Community-volger bestaat al.",
+  "couldnt_update_community": "Kon community niet bijwerken.",
+  "no_community_edit_allowed": "Niet toegestaan om community te bewerken.",
+  "system_err_login": "Systeemfout. Probeer uit te loggen en weer in te loggen.",
+  "community_user_already_banned": "Community-gebruiker reeds verbannen.",
+  "couldnt_find_that_username_or_email": "Kon gebruikersnaam of e-mailadres niet vinden.",
+  "password_incorrect": "Wachtwoord incorrect.",
+  "registration_closed": "Registratie gesloten",
+  "passwords_dont_match": "Wachtwoorden zijn niet gelijk.",
+  "invalid_username": "Ongeldige gebruikersnaam.",
+  "couldnt_update_user": "Kon gebruiker niet bijwerken.",
+  "couldnt_update_private_message": "Kan beveiligd bericht niet bijwerken.",
+  "couldnt_update_post": "Kon post niet bijwerken",
+  "couldnt_create_private_message": "Kan beveiligd bericht niet maken.",
+  "no_private_message_edit_allowed": "Niet toegestaan om privé berichten te wijzigen."
 }
