--- a/lib/l10n/intl_pt_BR.arb
+++ b/lib/l10n/intl_pt_BR.arb
@@ -53,5 +53,50 @@
   "top": "Top",
   "chat": "Chat",
   "admin": "administrador",
-  "by": "por"
+  "by": "por",
+  "not_an_admin": "Não é administrador.",
+  "couldnt_find_post": "Não foi possível encontrar a publicação.",
+  "not_logged_in": "Não autenticado.",
+  "site_ban": "Você foi banido do site",
+  "community_ban": "Você foi banido desta comunidade.",
+  "downvotes_disabled": "Votos negativos desativados",
+  "invalid_url": "URL inválida.",
+  "locked": "trancado",
+  "couldnt_create_comment": "Não foi possível criar o comentário.",
+  "couldnt_like_comment": "Não foi possível curtir o comentário.",
+  "couldnt_update_comment": "Não foi possível atualizar o comentário.",
+  "no_comment_edit_allowed": "Sem permissão para editar comentário.",
+  "couldnt_save_comment": "Não foi possível salvar o comentário.",
+  "couldnt_get_comments": "Não foi possível obter os comentários.",
+  "invalid_post_title": "Título de publicação inválido",
+  "couldnt_create_post": "Não foi possível criar a publicação.",
+  "couldnt_like_post": "Não foi possível curtir a publicação.",
+  "couldnt_find_community": "Não foi possível encontrar a comunidade.",
+  "couldnt_get_posts": "Não foi possível obter as publicações",
+  "no_post_edit_allowed": "Sem permissão para editar publicação.",
+  "couldnt_save_post": "Não foi possível guardar a publicação.",
+  "site_already_exists": "O site já existe.",
+  "couldnt_update_site": "Não foi possível atualizar o site.",
+  "invalid_community_name": "Nome inválido.",
+  "community_already_exists": "Esta comunidade já existe.",
+  "community_moderator_already_exists": "Este moderador da comunidade já existe.",
+  "community_follower_already_exists": "Este seguidor da comunidade já existe.",
+  "not_a_moderator": "Não é da moderação.",
+  "couldnt_update_community": "Não foi possível atualizar a comunidade.",
+  "no_community_edit_allowed": "Sem permissão para editar comunidade.",
+  "system_err_login": "Erro no sistema. Tente sair e autenticar-se outra vez.",
+  "community_user_already_banned": "Este usuário da comunidade já foi banido.",
+  "couldnt_find_that_username_or_email": "Não foi possível encontrar esse usuário ou e-mail.",
+  "password_incorrect": "Senha incorreta.",
+  "registration_closed": "Registros desativados",
+  "invalid_password": "Senha inválida. A senha deve ter no máximo 60 caracteres.",
+  "passwords_dont_match": "As senhas não são iguais.",
+  "captcha_incorrect": "Captcha incorreto.",
+  "invalid_username": "Nome de usuário inválido.",
+  "bio_length_overflow": "Uma biografia de usuário não pode ter mais de 300 caracters.",
+  "couldnt_update_user": "Não foi possível atualizar o usuário.",
+  "couldnt_update_private_message": "Não foi possível atualizar a mensagem privada.",
+  "couldnt_update_post": "Não foi possível atualizar a publicação",
+  "couldnt_create_private_message": "Não foi possível criar mensagem privada.",
+  "no_private_message_edit_allowed": "Sem permissão para editar mensagem privada."
 }
