--- a/lib/l10n/intl_sq.arb
+++ b/lib/l10n/intl_sq.arb
@@ -49,5 +49,44 @@
   "top": "Më të pëqlyerat",
   "chat": "Chat",
   "admin": "administrator",
-  "by": "nga"
+  "by": "nga",
+  "not_an_admin": "Nuk je administrator.",
+  "couldnt_find_post": "Nuk mund të gjendeshin postimet.",
+  "not_logged_in": "Nuk jeni kyçur.",
+  "site_ban": "Jeni dëbuar nga kjo faqe",
+  "community_ban": "Jeni dëbuar nga ky komunitet.",
+  "downvotes_disabled": "Votat negative janë të çaktivizuara",
+  "locked": "mbyllur",
+  "couldnt_create_comment": "Krijimi i komentit nuk ishte i mundshëm.",
+  "couldnt_like_comment": "Pëlqimi i komentit nuk ishte i mundshëm.",
+  "couldnt_update_comment": "Përditësimi i komentit nuk ishte i mundshëm.",
+  "no_comment_edit_allowed": "Nuk të lejohet redaktimi i komentit.",
+  "couldnt_save_comment": "Ruajtja e komentit nuk ishte e mundshme.",
+  "couldnt_get_comments": "Nuk mund të merrnim komentet.",
+  "couldnt_create_post": "Nuk mund të krijohej postimi.",
+  "couldnt_like_post": "Nuk mund të pëlqehej postimi.",
+  "couldnt_find_community": "Komuniteti nuk mund të gjendej.",
+  "couldnt_get_posts": "Nuk mund të merreshin postimet",
+  "no_post_edit_allowed": "Nuk lejohet redaktimi i postimit.",
+  "couldnt_save_post": "Postimi nuk u ruajt.",
+  "site_already_exists": "Faqja tashmë ekziston.",
+  "couldnt_update_site": "Faqja nuk mund të përditësohej.",
+  "invalid_community_name": "Emër invalid.",
+  "community_already_exists": "Komuniteti ekziston më.",
+  "community_moderator_already_exists": "Moderatori i komunitetit tashmë ekziston.",
+  "community_follower_already_exists": "Ndjekësi i komunitetit tashmë ekziston.",
+  "couldnt_update_community": "Komuniteti nuk mundi të përditësohej.",
+  "no_community_edit_allowed": "Nuk të lejohet redaktimi i komunitetit.",
+  "system_err_login": "Gabim sistemi. Provo të shkyçesh dhe të kyçesh përsëri.",
+  "community_user_already_banned": "Anëtari i komunitetit tashmë është dëbuar.",
+  "couldnt_find_that_username_or_email": "Nuk mund të gjendej ky emër virtual ose email.",
+  "password_incorrect": "Fjalëkalimi është i pasaktë.",
+  "registration_closed": "Regjistrimi u mbyll",
+  "passwords_dont_match": "Fjalëkalimet nuk janë të njëjta.",
+  "invalid_username": "Emri virtual është invalid.",
+  "couldnt_update_user": "Përditësimi i përdoruesit nuk ishte i mundshëm.",
+  "couldnt_update_private_message": "Nuk mundëm të përditësonim mesazhin privat.",
+  "couldnt_update_post": "Postimi nuk mundi të përditësohej",
+  "couldnt_create_private_message": "Nuk mund të krijohej mesazhi privat.",
+  "no_private_message_edit_allowed": "Nuk lejohet redaktimi i mesazhit privat."
 }
