--- a/lib/l10n/intl_sv.arb
+++ b/lib/l10n/intl_sv.arb
@@ -53,5 +53,54 @@
   "top": "Topp",
   "chat": "Chatta",
   "admin": "administratör",
-  "by": "av"
+  "by": "av",
+  "not_an_admin": "Inte en administratör.",
+  "couldnt_find_post": "Kunde inte hitta inlägg.",
+  "not_logged_in": "Inte inloggad.",
+  "site_ban": "Du har blockerats från webbplatsen",
+  "community_ban": "Du har blockerats från den här gemenskapen.",
+  "downvotes_disabled": "Nedröstningar inaktiverade",
+  "invalid_url": "Ogiltig URL.",
+  "locked": "låst",
+  "couldnt_create_comment": "Kunde inte skapa kommentar.",
+  "couldnt_like_comment": "Kunde inte gilla kommentar.",
+  "couldnt_update_comment": "Kunde inte uppdatera kommentar.",
+  "no_comment_edit_allowed": "Har inte behörighet att redigera kommentar.",
+  "couldnt_save_comment": "Kunde inte spara kommentar.",
+  "couldnt_get_comments": "Kunde inte hämta kommentarer.",
+  "report_reason_required": "En anledning måste anges.",
+  "report_too_long": "Anmälan är för lång.",
+  "couldnt_create_report": "Kunde inte skapa anmälan.",
+  "couldnt_resolve_report": "Kunde inte markera anmälan som löst.",
+  "invalid_post_title": "Ogiltig inläggstitel",
+  "couldnt_create_post": "Kunde inte skapa inlägg.",
+  "couldnt_like_post": "Kunde inte gilla inlägg.",
+  "couldnt_find_community": "Kunde inte hitta gemenskap.",
+  "couldnt_get_posts": "Kunde inte hämta inlägg",
+  "no_post_edit_allowed": "Har inte behörighet att redigera inlägg.",
+  "couldnt_save_post": "Kunde inte spara inlägg.",
+  "site_already_exists": "Webbplatsen finns redan.",
+  "couldnt_update_site": "Kunde inte uppdatera webbplats.",
+  "invalid_community_name": "Ogiltigt namn.",
+  "community_already_exists": "Gemenskapen finns redan.",
+  "community_moderator_already_exists": "Gemenskapsmoderatorn finns redan.",
+  "community_follower_already_exists": "Gemenskapsföljaren finns redan.",
+  "not_a_moderator": "Inte en moderator.",
+  "couldnt_update_community": "Kunde inte uppdatera gemenskap.",
+  "no_community_edit_allowed": "Har inte behörighet att redigera gemenskap.",
+  "system_err_login": "Systemfel. Försök att logga ut och sedan in igen.",
+  "community_user_already_banned": "Gemenskapsanvändaren redan blockerad.",
+  "couldnt_find_that_username_or_email": "Kunde inte hitta det användarnamnet eller e-postadressen.",
+  "password_incorrect": "Ogiltigt lösenord.",
+  "registration_closed": "Registrering stängd",
+  "invalid_password": "Ogiltigt lösenord. Lösenordet måste innehålla minst 60 tecken.",
+  "passwords_dont_match": "Lösenorden stämmer inte överens.",
+  "captcha_incorrect": "Captchan stämmer inte.",
+  "invalid_username": "Ogiltigt användarnamn.",
+  "bio_length_overflow": "Användarpresentationen får inte innehålla fler än 300 tecken.",
+  "couldnt_update_user": "Kunde inte uppdatera användare.",
+  "couldnt_update_private_message": "Kunde inte uppdatera privat meddelande.",
+  "couldnt_update_post": "Kunde inte uppdatera inlägg",
+  "couldnt_create_private_message": "Kunde inte skapa privat meddelande.",
+  "no_private_message_edit_allowed": "Inte tillåtet att redigera privata meddelanden."
 }
