--- a/lib/l10n/intl_uk.arb
+++ b/lib/l10n/intl_uk.arb
@@ -49,5 +49,44 @@
   "top": "Найкраще",
   "chat": "Чат",
   "admin": "адміністратор",
-  "by": "від"
+  "by": "від",
+  "not_an_admin": "Не адміністратор.",
+  "couldnt_find_post": "Не вдалося знайти запис.",
+  "not_logged_in": "Не авторизовані.",
+  "site_ban": "Ви були заблоковані на данному сайті",
+  "community_ban": "Ви були заблоковані в цій спільноті.",
+  "downvotes_disabled": "Від'ємне голосування вимкненно.",
+  "locked": "заблоковоано",
+  "couldnt_create_comment": "Не вдалося створити коментар.",
+  "couldnt_like_comment": "Не вдалося лайкнути коментар.",
+  "couldnt_update_comment": "Не вдалося обновити коментар.",
+  "no_comment_edit_allowed": "Неможливо відредагувати коментар.",
+  "couldnt_save_comment": "Не вдалося зберегти коментар.",
+  "couldnt_get_comments": "Не вдалося отримати коментар.",
+  "couldnt_create_post": "Не вдалося створити запис.",
+  "couldnt_like_post": "Не вдалося лайкнути запис.",
+  "couldnt_find_community": "Не вдалося знайти спільноту.",
+  "couldnt_get_posts": "Не вдалося знайти записи",
+  "no_post_edit_allowed": "Неможливо відредагувати запис.",
+  "couldnt_save_post": "Не вдалося зберегти запис.",
+  "site_already_exists": "Сайт вже існує.",
+  "couldnt_update_site": "Не вдалося оновити сайт.",
+  "invalid_community_name": "Неправильне ім'я користувача.",
+  "community_already_exists": "Спільнота вже існує.",
+  "community_moderator_already_exists": "Модератор спільноти вже існує.",
+  "community_follower_already_exists": "Підписник спільноти вже існує.",
+  "couldnt_update_community": "Не вдалося обновити спільноту.",
+  "no_community_edit_allowed": "Неможливо відредагувати спільноту.",
+  "system_err_login": "Системна помилка. Спробуйте вийти та зайти назад.",
+  "community_user_already_banned": "Член спільноти вже забаниний..",
+  "couldnt_find_that_username_or_email": "Не вдалося знайти ім'я користувача чи email.",
+  "password_incorrect": "Неправильний пароль.",
+  "registration_closed": "Реєстрацію закрито",
+  "passwords_dont_match": "Паролі не співпадають.",
+  "invalid_username": "Неправильне ім'я користувача.",
+  "couldnt_update_user": "Не вдалося оновити користувача.",
+  "couldnt_update_private_message": "Не вдалося оновити особисте повідомлення.",
+  "couldnt_update_post": "Не вдалося обновити запис",
+  "couldnt_create_private_message": "Не вдалося отримати особисте повідомлення.",
+  "no_private_message_edit_allowed": "Не можна редагувати особисті повідомлення."
 }
