--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -53,5 +53,54 @@
   "top": "推荐",
   "chat": "聊天",
   "admin": "总管理员",
-  "by": " "
+  "by": " ",
+  "not_an_admin": "不是管理员。",
+  "couldnt_find_post": "无法找到帖子。",
+  "not_logged_in": "未登录.",
+  "site_ban": "你已被本站拉黑",
+  "community_ban": "你已被此社群拉黑。",
+  "downvotes_disabled": "踩已禁用",
+  "invalid_url": "URL无效.",
+  "locked": "已锁定",
+  "couldnt_create_comment": "无法创建评论。",
+  "couldnt_like_comment": "无法点赞评论。",
+  "couldnt_update_comment": "无法更新评论。",
+  "no_comment_edit_allowed": "没有编辑评论的权限。",
+  "couldnt_save_comment": "无法保存评论。",
+  "couldnt_get_comments": "无法获取评论。",
+  "report_reason_required": "需要报告原因.",
+  "report_too_long": "报告时间过长.",
+  "couldnt_create_report": "无法创建报告.",
+  "couldnt_resolve_report": "无法解析报告.",
+  "invalid_post_title": "帖子标题无效",
+  "couldnt_create_post": "无法创建帖子。",
+  "couldnt_like_post": "无法点赞帖子。",
+  "couldnt_find_community": "无法找到社群。",
+  "couldnt_get_posts": "无法获取帖子",
+  "no_post_edit_allowed": "没有编辑帖子的权限。",
+  "couldnt_save_post": "无法保存帖子。",
+  "site_already_exists": "站点已存在。",
+  "couldnt_update_site": "无法更新站点。",
+  "invalid_community_name": "无效名称.",
+  "community_already_exists": "社群已存在。",
+  "community_moderator_already_exists": "社群监管人已存在。",
+  "community_follower_already_exists": "社群关注者已存在。",
+  "not_a_moderator": "不是仲裁员.",
+  "couldnt_update_community": "无法更新社群。",
+  "no_community_edit_allowed": "没有编辑社群的权限。",
+  "system_err_login": "系统错误。请尝试注销后重新登入。",
+  "community_user_already_banned": "社群用户已被禁止。",
+  "couldnt_find_that_username_or_email": "用户名/邮箱不存在。",
+  "password_incorrect": "密码不正确。",
+  "registration_closed": "注册功能已关闭",
+  "invalid_password": "密码无效。密码长度必须小于60个字符。",
+  "passwords_dont_match": "密码不匹配。",
+  "captcha_incorrect": "验证码不正确。",
+  "invalid_username": "用户名无效",
+  "bio_length_overflow": "自我介绍不能超过300个字符。",
+  "couldnt_update_user": "无法更新用户。",
+  "couldnt_update_private_message": "无法更新私信。",
+  "couldnt_update_post": "无法更新帖子",
+  "couldnt_create_private_message": "无法创建私信。",
+  "no_private_message_edit_allowed": "没有编辑私信的权限。"
 }
