--- a/lib/l10n/intl_da.arb
+++ b/lib/l10n/intl_da.arb
@@ -53,5 +53,54 @@
   "top": "Top",
   "chat": "Chat",
   "admin": "administrator",
-  "by": "af"
+  "by": "af",
+  "not_an_admin": "Ej en administrator.",
+  "couldnt_find_post": "Kunne ikke finde indlæg.",
+  "not_logged_in": "Ikke logget ind.",
+  "site_ban": "Du er udelukket fra denne site",
+  "community_ban": "Du er blevet udelukket fra dette forum.",
+  "downvotes_disabled": "Nedstem deaktiveret",
+  "invalid_url": "Ugyldig URL.",
+  "locked": "låst",
+  "couldnt_create_comment": "Kunne ikke oprette kommentar.",
+  "couldnt_like_comment": "Kunne ikke like kommentar.",
+  "couldnt_update_comment": "Kunne ikke opdatere kommentar.",
+  "no_comment_edit_allowed": "Ej tilladt at ændre kommentar.",
+  "couldnt_save_comment": "Kunne ikke gemme kommentar.",
+  "couldnt_get_comments": "Kunne ikke hente kommentarer.",
+  "report_reason_required": "Angiv grund påkrævet.",
+  "report_too_long": "Angivelsen er for lang.",
+  "couldnt_create_report": "Kunne ikke oprette angivelse.",
+  "couldnt_resolve_report": "Kunne ikke løse angivelse.",
+  "invalid_post_title": "Ugyldig indlægstitel",
+  "couldnt_create_post": "Kunne ikke oprette indlæg.",
+  "couldnt_like_post": "Kunne ikke like indlæg.",
+  "couldnt_find_community": "Kunne ikke finde forum.",
+  "couldnt_get_posts": "Kunne ikke hente indlæg",
+  "no_post_edit_allowed": "Ej tilladt at ændre indlæg.",
+  "couldnt_save_post": "Kunne ikke gemme indlæg.",
+  "site_already_exists": "Site findes allerede.",
+  "couldnt_update_site": "Kunne ikke opdatere site.",
+  "invalid_community_name": "Ugyldigt navn.",
+  "community_already_exists": "Forum findes allerede.",
+  "community_moderator_already_exists": "Forum moderator findes allerede.",
+  "community_follower_already_exists": "Forum abonnent findes allerede.",
+  "not_a_moderator": "Ej en moderator.",
+  "couldnt_update_community": "Kunne ikke opdatere forum.",
+  "no_community_edit_allowed": "Ej tilladt at ændre forum.",
+  "system_err_login": "System fejl. Prøv at logge ud- og ind igen.",
+  "community_user_already_banned": "Forum bruger allerede udelukket.",
+  "couldnt_find_that_username_or_email": "Kunne ikke finde bruger eller email.",
+  "password_incorrect": "Kodeord forkert.",
+  "registration_closed": "Tilmelding lukket",
+  "invalid_password": "Ugyldigt kodeord. Kodeord skal have <= 60 tegn.",
+  "passwords_dont_match": "Kodeord matcher ikke.",
+  "captcha_incorrect": "Captcha forkert.",
+  "invalid_username": "Fejl i brugernavn.",
+  "bio_length_overflow": "Brugerbeskrivelse skal være mindre end 300 tegn.",
+  "couldnt_update_user": "Kunne ikke opdatere brugeren.",
+  "couldnt_update_private_message": "Kunne ej opdatere privat besked.",
+  "couldnt_update_post": "Kunne ikke opdatere indlæg",
+  "couldnt_create_private_message": "Kunne ikke oprette privat besked.",
+  "no_private_message_edit_allowed": "Ulovligt at ændre i privat besked."
 }
