--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -121,5 +121,103 @@
   "admin": "admin",
   "@admin": {},
   "by": "by",
-  "@by": {}
+  "@by": {},
+  "not_an_admin": "Not an admin.",
+  "@not_an_admin": {},
+  "couldnt_find_post": "Couldn't find post.",
+  "@couldnt_find_post": {},
+  "not_logged_in": "Not logged in.",
+  "@not_logged_in": {},
+  "site_ban": "You have been banned from the site",
+  "@site_ban": {},
+  "community_ban": "You have been banned from this community.",
+  "@community_ban": {},
+  "downvotes_disabled": "Downvotes disabled",
+  "@downvotes_disabled": {},
+  "invalid_url": "Invalid URL.",
+  "@invalid_url": {},
+  "locked": "locked",
+  "@locked": {},
+  "couldnt_create_comment": "Couldn't create comment.",
+  "@couldnt_create_comment": {},
+  "couldnt_like_comment": "Couldn't like comment.",
+  "@couldnt_like_comment": {},
+  "couldnt_update_comment": "Couldn't update comment.",
+  "@couldnt_update_comment": {},
+  "no_comment_edit_allowed": "Not allowed to edit comment.",
+  "@no_comment_edit_allowed": {},
+  "couldnt_save_comment": "Couldn't save comment.",
+  "@couldnt_save_comment": {},
+  "couldnt_get_comments": "Couldn't get comments.",
+  "@couldnt_get_comments": {},
+  "report_reason_required": "Report reason required.",
+  "@report_reason_required": {},
+  "report_too_long": "Report too long.",
+  "@report_too_long": {},
+  "couldnt_create_report": "Couldn't create report.",
+  "@couldnt_create_report": {},
+  "couldnt_resolve_report": "Couldn't resolve report.",
+  "@couldnt_resolve_report": {},
+  "invalid_post_title": "Invalid post title",
+  "@invalid_post_title": {},
+  "couldnt_create_post": "Couldn't create post.",
+  "@couldnt_create_post": {},
+  "couldnt_like_post": "Couldn't like post.",
+  "@couldnt_like_post": {},
+  "couldnt_find_community": "Couldn't find community.",
+  "@couldnt_find_community": {},
+  "couldnt_get_posts": "Couldn't get posts",
+  "@couldnt_get_posts": {},
+  "no_post_edit_allowed": "Not allowed to edit post.",
+  "@no_post_edit_allowed": {},
+  "couldnt_save_post": "Couldn't save post.",
+  "@couldnt_save_post": {},
+  "site_already_exists": "Site already exists.",
+  "@site_already_exists": {},
+  "couldnt_update_site": "Couldn't update site.",
+  "@couldnt_update_site": {},
+  "invalid_community_name": "Invalid name.",
+  "@invalid_community_name": {},
+  "community_already_exists": "Community already exists.",
+  "@community_already_exists": {},
+  "community_moderator_already_exists": "Community moderator already exists.",
+  "@community_moderator_already_exists": {},
+  "community_follower_already_exists": "Community follower already exists.",
+  "@community_follower_already_exists": {},
+  "not_a_moderator": "Not a moderator.",
+  "@not_a_moderator": {},
+  "couldnt_update_community": "Couldn't update Community.",
+  "@couldnt_update_community": {},
+  "no_community_edit_allowed": "Not allowed to edit community.",
+  "@no_community_edit_allowed": {},
+  "system_err_login": "System error. Try logging out and back in.",
+  "@system_err_login": {},
+  "community_user_already_banned": "Community user already banned.",
+  "@community_user_already_banned": {},
+  "couldnt_find_that_username_or_email": "Couldn't find that username or email.",
+  "@couldnt_find_that_username_or_email": {},
+  "password_incorrect": "Password incorrect.",
+  "@password_incorrect": {},
+  "registration_closed": "Registration closed",
+  "@registration_closed": {},
+  "invalid_password": "Invalid password. Password must be <= 60 characters.",
+  "@invalid_password": {},
+  "passwords_dont_match": "Passwords do not match.",
+  "@passwords_dont_match": {},
+  "captcha_incorrect": "Captcha incorrect.",
+  "@captcha_incorrect": {},
+  "invalid_username": "Invalid username.",
+  "@invalid_username": {},
+  "bio_length_overflow": "User bio cannot exceed 300 characters.",
+  "@bio_length_overflow": {},
+  "couldnt_update_user": "Couldn't update user.",
+  "@couldnt_update_user": {},
+  "couldnt_update_private_message": "Couldn't update private message.",
+  "@couldnt_update_private_message": {},
+  "couldnt_update_post": "Couldn't update post",
+  "@couldnt_update_post": {},
+  "couldnt_create_private_message": "Couldn't create private message.",
+  "@couldnt_create_private_message": {},
+  "no_private_message_edit_allowed": "Not allowed to edit private message.",
+  "@no_private_message_edit_allowed": {}
 }
