--- a/lib/l10n/intl_eo.arb
+++ b/lib/l10n/intl_eo.arb
@@ -53,5 +53,54 @@
   "top": "Supraj",
   "chat": "Babilo",
   "admin": "administranto",
-  "by": "de"
+  "by": "de",
+  "not_an_admin": "Ne estas administranto.",
+  "couldnt_find_post": "Ne povis trovi la afiŝon.",
+  "not_logged_in": "Nesalutinta.",
+  "site_ban": "Vi estas forbarita de la retejo",
+  "community_ban": "Vi estas forbarita de la komunumo.",
+  "downvotes_disabled": "Kontraŭvoĉoj malŝaltiĝis",
+  "invalid_url": "Nevalida URL.",
+  "locked": "ŝlosita",
+  "couldnt_create_comment": "Ne povis krei la komenton.",
+  "couldnt_like_comment": "Ne povis ŝati la komenton.",
+  "couldnt_update_comment": "Ne povis ĝisdatigi la komenton.",
+  "no_comment_edit_allowed": "Ne rajtas redakti la komenton.",
+  "couldnt_save_comment": "Ne povis konservi la komenton.",
+  "couldnt_get_comments": "Ne povis akiri la komentojn.",
+  "report_reason_required": "Necesas kialo de raporto.",
+  "report_too_long": "Raporto estas tro longa.",
+  "couldnt_create_report": "Ne povis krei raporton.",
+  "couldnt_resolve_report": "Ne povis trakti raporton.",
+  "invalid_post_title": "Nevalida titolo de afiŝo",
+  "couldnt_create_post": "Ne povis krei la afiŝon.",
+  "couldnt_like_post": "Ne povis ŝati la afiŝon.",
+  "couldnt_find_community": "Ne povis trovi la komunumon.",
+  "couldnt_get_posts": "Ne povis akiri afiŝojn",
+  "no_post_edit_allowed": "Ne rajtas redakti la afiŝon.",
+  "couldnt_save_post": "Ne povis konservi la afiŝon.",
+  "site_already_exists": "Retejo jam ekzistas.",
+  "couldnt_update_site": "Ne povis ĝisdatigi la retejon.",
+  "invalid_community_name": "Nevalida nomo.",
+  "community_already_exists": "Komunumo jam ekzistas.",
+  "community_moderator_already_exists": "Reguligisto de komunumo jam ekzistas.",
+  "community_follower_already_exists": "Abonanto de komunumo jam ekzistas.",
+  "not_a_moderator": "Nereguligisto.",
+  "couldnt_update_community": "Ne povis ĝisdatigi la komunumon.",
+  "no_community_edit_allowed": "Ne rajtas redakti la komunumon.",
+  "system_err_login": "Sistema eraro. Provu adiaŭi kaj resaluti.",
+  "community_user_already_banned": "Uzanto de komunumo jam estas forbarita.",
+  "couldnt_find_that_username_or_email": "Ne povis trovi tiun uzantonomon aŭ retpoŝtadreson.",
+  "password_incorrect": "Pasvorto malĝustas.",
+  "registration_closed": "Registrado malebliĝis",
+  "invalid_password": "Nevalido pasvorto. Pasvorto devas havi ≤ 60 signojn.",
+  "passwords_dont_match": "Pasvortoj ne samas.",
+  "captcha_incorrect": "Neĝuste solvita kontrolo de homeco.",
+  "invalid_username": "Nevalida uzantonomo.",
+  "bio_length_overflow": "Prio de uzanto ne povas havi pli ol 300 signojn.",
+  "couldnt_update_user": "Ne povis ĝisdatigi la uzanton.",
+  "couldnt_update_private_message": "Ne povis ĝisdatigi la privatan mesaĝon.",
+  "couldnt_update_post": "Ne povis ĝisdatigi la afiŝon",
+  "couldnt_create_private_message": "Ne povis krei privatan mesaĝon.",
+  "no_private_message_edit_allowed": "Ne rajtas redakti la privatan mesaĝon."
 }
