--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -53,5 +53,54 @@
   "top": "Lo mejor",
   "chat": "Chat",
   "admin": "administrador",
-  "by": "por"
+  "by": "por",
+  "not_an_admin": "No es un administrador.",
+  "couldnt_find_post": "No se pudo encontrar la publicación.",
+  "not_logged_in": "No has iniciado sesión.",
+  "site_ban": "Has sido expulsado del sitio",
+  "community_ban": "Has sido expulsado de esta comunidad.",
+  "downvotes_disabled": "Votos negativos deshabilitados",
+  "invalid_url": "URL no válido.",
+  "locked": "bloqueado",
+  "couldnt_create_comment": "No se pudo crear el comentario.",
+  "couldnt_like_comment": "No se pudo dar me gusta al comentario.",
+  "couldnt_update_comment": "No se pudo actualizar el comentario.",
+  "no_comment_edit_allowed": "No tiene permisos para editar el comentario.",
+  "couldnt_save_comment": "No se pudo guardar el comentario.",
+  "couldnt_get_comments": "No se pudo obtener los comentarios.",
+  "report_reason_required": "Motivo del informe necesario.",
+  "report_too_long": "Informe demasiado largo.",
+  "couldnt_create_report": "No se pudo generar el informe.",
+  "couldnt_resolve_report": "No se pudo resolver el informe.",
+  "invalid_post_title": "Título de la publicación no válido",
+  "couldnt_create_post": "No se pudo crear la publicación.",
+  "couldnt_like_post": "No se pudo dar me gusta a la publicación.",
+  "couldnt_find_community": "No se pudo encontrar la comunidad.",
+  "couldnt_get_posts": "No se pudo obtener las publicaciones",
+  "no_post_edit_allowed": "No tiene permisos para editar la publicación.",
+  "couldnt_save_post": "No se pudo guardar la publicación.",
+  "site_already_exists": "El sitio ya existe.",
+  "couldnt_update_site": "No se pudo actualizar el sitio.",
+  "invalid_community_name": "Nombre no válido.",
+  "community_already_exists": "Esta comunidad ya existe.",
+  "community_moderator_already_exists": "Este moderador de la comunidad ya existe.",
+  "community_follower_already_exists": "Este seguidor de la comunidad ya existe.",
+  "not_a_moderator": "No eres moderador.",
+  "couldnt_update_community": "No se pudo actualizar la comunidad.",
+  "no_community_edit_allowed": "No tiene permisos para editar la comunidad.",
+  "system_err_login": "Error del sistema. Intente cerrar sesión e ingresar de nuevo.",
+  "community_user_already_banned": "Este usuario de la comunidad ya fue expulsado.",
+  "couldnt_find_that_username_or_email": "No se pudo encontrar ese nombre de usuario o correo electrónico.",
+  "password_incorrect": "Contraseña incorrecta.",
+  "registration_closed": "Registro cerrado",
+  "invalid_password": "Contraseña no válida. La contraseña debe ser <= 60 carácteres.",
+  "passwords_dont_match": "Las contraseñas no coinciden.",
+  "captcha_incorrect": "Captcha incorrecto.",
+  "invalid_username": "Nombre de usuario inválido.",
+  "bio_length_overflow": "La biografía del usuario no puede exceder los 300 caracteres.",
+  "couldnt_update_user": "No se pudo actualizar el usuario.",
+  "couldnt_update_private_message": "No se pudo actualizar el mensaje privado.",
+  "couldnt_update_post": "No se pudo actualizar la publicación",
+  "couldnt_create_private_message": "No se pudo crear el mensaje privado.",
+  "no_private_message_edit_allowed": "Sin permisos para editar el mensaje privado."
 }
