--- a/lib/l10n/intl_fr.arb
+++ b/lib/l10n/intl_fr.arb
@@ -53,5 +53,53 @@
   "top": "Top",
   "chat": "Chat",
   "admin": "admin",
-  "by": "par"
+  "by": "par",
+  "not_an_admin": "Pas administrateur.",
+  "couldnt_find_post": "Impossible de trouver la publication.",
+  "not_logged_in": "Vous n’êtes pas connecté.",
+  "site_ban": "Vous avez été banni du site",
+  "community_ban": "Vous avez été banni de cette communauté.",
+  "downvotes_disabled": "Votes négatifs désactivés",
+  "invalid_url": "URL invalide.",
+  "locked": "verrouillé",
+  "couldnt_create_comment": "Impossible de publier le commentaire.",
+  "couldnt_like_comment": "Impossible d’aimer le commentaire.",
+  "couldnt_update_comment": "Impossible de mettre à jour le commentaire.",
+  "no_comment_edit_allowed": "Vous n’êtes pas autorisé à éditer ce commentaire.",
+  "couldnt_save_comment": "Impossible de sauvegarder le commentaire.",
+  "couldnt_get_comments": "Impossible d'obtenir les commentaires.",
+  "report_reason_required": "Raison du signalement requise.",
+  "couldnt_create_report": "Impossible de créer le signalement.",
+  "couldnt_resolve_report": "Impossible de résoudre le rapport.",
+  "invalid_post_title": "Titre du post invalide",
+  "couldnt_create_post": "Impossible de créer la publication.",
+  "couldnt_like_post": "Impossible d’aimer la publication.",
+  "couldnt_find_community": "Impossible de trouver cette communauté.",
+  "couldnt_get_posts": "Impossible d’obtenir les publications",
+  "no_post_edit_allowed": "Vous n’êtes pas autorisé à éditer cette publication.",
+  "couldnt_save_post": "Impossible de sauvegarder la publication.",
+  "site_already_exists": "Le site existe déjà.",
+  "couldnt_update_site": "Impossible de mettre à jour le site.",
+  "invalid_community_name": "Nom invalide.",
+  "community_already_exists": "Cette communauté existe déjà.",
+  "community_moderator_already_exists": "Ce membre est déjà modérateur.",
+  "community_follower_already_exists": "Ce membre est déjà abonné.",
+  "not_a_moderator": "N'êtes pas un modérateur.",
+  "couldnt_update_community": "Impossible de mettre à jour cette communauté.",
+  "no_community_edit_allowed": "Vous n’êtes pas autorisé à éditer cette communauté.",
+  "system_err_login": "Erreur système. Essayez de vous déconnecter puis de vous reconnecter.",
+  "community_user_already_banned": "Ce membre est déjà banni.",
+  "couldnt_find_that_username_or_email": "Impossible de trouver cet·te utilisateur·rice ou cet email.",
+  "password_incorrect": "Mot de passe incorrect.",
+  "registration_closed": "Inscriptions fermées",
+  "invalid_password": "Mot de passe erroné. La longueur du mot de passe doit être <= 60 caractères.",
+  "passwords_dont_match": "Les mots de passes ne correspondent pas.",
+  "captcha_incorrect": "Captcha erroné.",
+  "invalid_username": "Nom d'utilisateur invalide.",
+  "bio_length_overflow": "La bio utilisateur ne peut dépasser 300 caractères.",
+  "couldnt_update_user": "Impossible de mettre à jour l’utilisateur·rice.",
+  "couldnt_update_private_message": "Impossible de modifier le message privé.",
+  "couldnt_update_post": "Impossible de mettre à jour la publication",
+  "couldnt_create_private_message": "Impossible de créer un message privé.",
+  "no_private_message_edit_allowed": "Pas autorisé à modifier un message privé."
 }
