--- a/lib/l10n/intl_ga.arb
+++ b/lib/l10n/intl_ga.arb
@@ -53,5 +53,50 @@
   "top": "Barr",
   "chat": "Comhrá",
   "admin": "riarthóir",
-  "by": "le"
+  "by": "le",
+  "not_an_admin": "Ní riarthóir é.",
+  "couldnt_find_post": "Níorbh fhéidir an post a aimsiú.",
+  "not_logged_in": "Ní logáilte isteach.",
+  "site_ban": "Cuireadh cosc ort ón suíomh",
+  "community_ban": "Cuireadh cosc ort ón bpobal seo.",
+  "downvotes_disabled": "Síosvótaí faoi mhíchumas",
+  "invalid_url": "URL neamhbhailí.",
+  "locked": "glasáilte",
+  "couldnt_create_comment": "Níorbh fhéidir a chruthú trácht.",
+  "couldnt_like_comment": "Níorbh fhéidir a is maith trácht.",
+  "couldnt_update_comment": "Níorbh fhéidir trácht a nuashonrú.",
+  "no_comment_edit_allowed": "Ní cheadaítear trácht a chur in eagar.",
+  "couldnt_save_comment": "Níorbh fhéidir trácht a shábháil.",
+  "couldnt_get_comments": "Níorbh fhéidir tuairimí a fháil.",
+  "invalid_post_title": "Teideal poist neamhbhailí",
+  "couldnt_create_post": "Níorbh fhéidir postáil a chruthú.",
+  "couldnt_like_post": "Níorbh fhéidir a is maith post.",
+  "couldnt_find_community": "Níorbh fhéidir Pobal a aimsiú.",
+  "couldnt_get_posts": "Níorbh fhéidir an post a fháil",
+  "no_post_edit_allowed": "Ní cheadaítear an post a chur in eagar.",
+  "couldnt_save_post": "Níorbh fhéidir an post a shábháil.",
+  "site_already_exists": "Suíomh ann cheana.",
+  "couldnt_update_site": "Níorbh fhéidir an suíomh a nuashonrú.",
+  "invalid_community_name": "Ainm neamhbhailí.",
+  "community_already_exists": "Pobal ann cheana féin.",
+  "community_moderator_already_exists": "Tá modhnóir pobail ann cheana féin.",
+  "community_follower_already_exists": "Tá leantóir pobail ann cheana féin.",
+  "not_a_moderator": "Ní modhnóir.",
+  "couldnt_update_community": "Níorbh fhéidir an Pobal a nuashonrú.",
+  "no_community_edit_allowed": "Ní cheadaítear an pobal a chur in eagar.",
+  "system_err_login": "Earráid chórais. Bain triail as logáil amach agus ar ais isteach.",
+  "community_user_already_banned": "Toirmisctear úsáideoir pobail cheana féin.",
+  "couldnt_find_that_username_or_email": "Níorbh fhéidir an t-ainm úsáideora nó an ríomhphost sin a fháil.",
+  "password_incorrect": "Pasfhocal mícheart.",
+  "registration_closed": "Clárú dúnta",
+  "invalid_password": "Pasfhocal neamhbhailí. Caithfidh <= 60 carachtar a bheith sa phasfhocal.",
+  "passwords_dont_match": "Ní hionann pasfhocail.",
+  "captcha_incorrect": "Ta Captcha mícheart.",
+  "invalid_username": "Ainm Úsáideora neamhbhailí.",
+  "bio_length_overflow": "Ní féidir le bith-úsáideoir níos mó ná 300 carachtar.",
+  "couldnt_update_user": "Níorbh fhéidir an t-úsáideoir a nuashonrú.",
+  "couldnt_update_private_message": "Níorbh fhéidir teachtaireacht phríobháideach a nuashonrú.",
+  "couldnt_update_post": "Níorbh fhéidir an post a nuashonrú",
+  "couldnt_create_private_message": "Níorbh fhéidir teachtaireacht phríobháideach a chruthú.",
+  "no_private_message_edit_allowed": "Ní cheadaítear teachtaireacht phríobháideach a chur in eagar."
 }
