--- a/lib/l10n/intl_hu.arb
+++ b/lib/l10n/intl_hu.arb
@@ -49,5 +49,44 @@
   "top": "Legjobb",
   "chat": "Csevegés",
   "admin": "admin",
-  "by": "szerző"
+  "by": "szerző",
+  "not_an_admin": "Nem egy admin.",
+  "couldnt_find_post": "A bejegyzés nem található.",
+  "not_logged_in": "Nem vagy bejelentkezve.",
+  "site_ban": "Ki lettél tiltva az oldalról",
+  "community_ban": "Ki lettél tiltva ebből a közösségből.",
+  "downvotes_disabled": "Negatív szavazatok letiltva",
+  "locked": "zárolva",
+  "couldnt_create_comment": "Nem lehetett létrehozni a hozzászólást.",
+  "couldnt_like_comment": "Nem lehetett kedvelni a hozzászólást.",
+  "couldnt_update_comment": "Nem lehetett frissíteni a hozzászólást.",
+  "no_comment_edit_allowed": "A hozzászólás szerkesztése nem engedélyezett.",
+  "couldnt_save_comment": "Nem lehetett menteni a hozzászólást.",
+  "couldnt_get_comments": "Nem lehetett lekérdezni a hozzászólást.",
+  "couldnt_create_post": "Nem lehetett létrehozni a bejegyzést.",
+  "couldnt_like_post": "Nem lehetett kedvelni a bejegyzést.",
+  "couldnt_find_community": "A közösség nem található.",
+  "couldnt_get_posts": "Nem lehetett lekérdezni a bejegyzéseket",
+  "no_post_edit_allowed": "A bejegyzés szerkesztése nem engedélyezett.",
+  "couldnt_save_post": "Nem lehetett menteni a bejegyzést.",
+  "site_already_exists": "Az oldal már létezik.",
+  "couldnt_update_site": "Nem lehetett frissíteni az oldalt.",
+  "invalid_community_name": "Érvénytelen név.",
+  "community_already_exists": "A közösség már létezik.",
+  "community_moderator_already_exists": "Már létezik a közösségi moderátor.",
+  "community_follower_already_exists": "Már létezik a közösségi követő.",
+  "couldnt_update_community": "Nem lehetett frissíteni a közösséget.",
+  "no_community_edit_allowed": "A közösség szerkesztése nem engedélyezett.",
+  "system_err_login": "Rendszerhiba. Próbálj meg ki- és bejelentkezni!",
+  "community_user_already_banned": "A közösségi felhasználó már ki lett tiltva.",
+  "couldnt_find_that_username_or_email": "Az a felhasználónév vagy email nem található.",
+  "password_incorrect": "Rossz jelszó.",
+  "registration_closed": "Regisztráció lezárva",
+  "passwords_dont_match": "A jelszavak nem egyeznek.",
+  "invalid_username": "Érvénytelen felhasználónév.",
+  "couldnt_update_user": "Nem lehetett frissíteni a felhasználót.",
+  "couldnt_update_private_message": "Nem lehetett frissíteni a privát üzenetet.",
+  "couldnt_update_post": "Nem lehetett frissíteni a bejegyzést",
+  "couldnt_create_private_message": "Nem lehetett létrehozni a privát üzenetet.",
+  "no_private_message_edit_allowed": "A privát üzenet szerkesztése nem engedélyezett."
 }
