--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -53,5 +53,54 @@
   "top": "Top",
   "chat": "대화",
   "admin": "관리자",
-  "by": "작성"
+  "by": "작성",
+  "not_an_admin": "관리자가 아닙니다.",
+  "couldnt_find_post": "게시물을 찾을 수 없습니다.",
+  "not_logged_in": "로그인하지 않았습니다.",
+  "site_ban": "당신은 사이트에서 추방되었습니다",
+  "community_ban": "이 커뮤니티에서 추방되었습니다.",
+  "downvotes_disabled": "내림 비활성화",
+  "invalid_url": "잘못된 URL.",
+  "locked": "잠김",
+  "couldnt_create_comment": "덧글을 작성할 수 없습니다.",
+  "couldnt_like_comment": "덧글에 좋아요 표시를 할 수 없습니다.",
+  "couldnt_update_comment": "덧글을 업데이트 할 수 없습니다.",
+  "no_comment_edit_allowed": "덧글을 수정할 수 없습니다.",
+  "couldnt_save_comment": "덧글을 저장할 수 없습니다.",
+  "couldnt_get_comments": "덧글을 가져올 수 없습니다.",
+  "report_reason_required": "사유를 제출해야합니다.",
+  "report_too_long": "보고 글이 너무 길어요.",
+  "couldnt_create_report": "보고서를 생성할 수 없습니다.",
+  "couldnt_resolve_report": "보고서를 해결할 수 없습니다.",
+  "invalid_post_title": "잘못된 게시물 제목",
+  "couldnt_create_post": "게시물을 작성할 수 없습니다.",
+  "couldnt_like_post": "이 게시물에 좋아요 표시를 할 수 없습니다.",
+  "couldnt_find_community": "커뮤니티를 찾을 수 없습니다.",
+  "couldnt_get_posts": "게시물을 가져올 수 없습니다",
+  "no_post_edit_allowed": "게시물을 수정할 수 없습니다.",
+  "couldnt_save_post": "게시물을 저장할 수 없습니다.",
+  "site_already_exists": "사이트가 이미 존재합니다.",
+  "couldnt_update_site": "사이트를 업데이트 할 수 없습니다.",
+  "invalid_community_name": "잘못된 이름.",
+  "community_already_exists": "커뮤니티가 이미 존재합니다.",
+  "community_moderator_already_exists": "커뮤니티 운영자가 이미 존재합니다.",
+  "community_follower_already_exists": "커뮤니티 팔로어가 이미 존재합니다.",
+  "not_a_moderator": "중재자가 아닙니다.",
+  "couldnt_update_community": "커뮤니티를 업데이트 할 수 없습니다.",
+  "no_community_edit_allowed": "커뮤니티를 수정할 수 없습니다.",
+  "system_err_login": "시스템 오류. 다시 로그인하십시오.",
+  "community_user_already_banned": "커뮤니티 사용자가 이미 차단되었습니다.",
+  "couldnt_find_that_username_or_email": "해당 사용자 이름이나 이메일을 찾을 수 없습니다.",
+  "password_incorrect": "잘못된 비밀번호입니다.",
+  "registration_closed": "등록 닫기",
+  "invalid_password": "잘못된 비밀번호입니다. 비밀번호는 60글자이하로 만들어야 합니다.",
+  "passwords_dont_match": "비밀번호가 일치하지 않습니다.",
+  "captcha_incorrect": "보안문자가 일치하지 않습니다.",
+  "invalid_username": "잘못된 사용자 이름.",
+  "bio_length_overflow": "자기 소개는 300자를 초과 할 수 없습니다.",
+  "couldnt_update_user": "사용자를 업데이트 할 수 없습니다.",
+  "couldnt_update_private_message": "개인 메시지를 업데이트 할 수 없습니다.",
+  "couldnt_update_post": "게시물을 업데이트 할 수 없습니다",
+  "couldnt_create_private_message": "개인 메시지를 만들 수 없습니다.",
+  "no_private_message_edit_allowed": "개인 메시지를 편집 할 수 없습니다."
 }
