--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -53,5 +53,54 @@
   "top": "Лучшее",
   "chat": "Чат",
   "admin": "администратор",
-  "by": "от"
+  "by": "от",
+  "not_an_admin": "Не администратор.",
+  "couldnt_find_post": "Не получилось найти запись.",
+  "not_logged_in": "Не авторизованы.",
+  "site_ban": "Вы были заблокированы на данном сайте",
+  "community_ban": "Вы были заблокированы в данном сообществе.",
+  "downvotes_disabled": "Отрицательное голосование отключено",
+  "invalid_url": "Недопустимый URL.",
+  "locked": "заблокировано",
+  "couldnt_create_comment": "Не получилось создать комментарий.",
+  "couldnt_like_comment": "Не получилось лайкнуть комментарий.",
+  "couldnt_update_comment": "Не получилось обновить комментарий.",
+  "no_comment_edit_allowed": "Невозможно отредактировать комментарий.",
+  "couldnt_save_comment": "Не получилось сохранить комментарий.",
+  "couldnt_get_comments": "Не удалось получить комментарии.",
+  "report_reason_required": "Укажите причину жалобы.",
+  "report_too_long": "Жалоба слишком длинная.",
+  "couldnt_create_report": "Невозможно создать жалобу.",
+  "couldnt_resolve_report": "Невозможно разрешить жалобу.",
+  "invalid_post_title": "Недопустимый заголовок записи",
+  "couldnt_create_post": "Не получилось создать запись.",
+  "couldnt_like_post": "Не получилось лайкнуть запись.",
+  "couldnt_find_community": "Не получилось найти сообщество.",
+  "couldnt_get_posts": "Не получилось найти записи",
+  "no_post_edit_allowed": "Невозможно отредактировать запись.",
+  "couldnt_save_post": "Не получилось сохранить запись.",
+  "site_already_exists": "Сайт уже существует.",
+  "couldnt_update_site": "Не получилось обновить сайт.",
+  "invalid_community_name": "Неверное имя пользователя.",
+  "community_already_exists": "Сообщество уже существует.",
+  "community_moderator_already_exists": "Модератор сообщества уже существует.",
+  "community_follower_already_exists": "Подписчик сообщества уже существует.",
+  "not_a_moderator": "Не модератор.",
+  "couldnt_update_community": "Не получилось обновить сообщество.",
+  "no_community_edit_allowed": "Невозможно отредактировать сообщество.",
+  "system_err_login": "Системная ошибка. Попробуйте выйти из системы и вернуться обратно.",
+  "community_user_already_banned": "Пользователь сообщества уже заблокирован.",
+  "couldnt_find_that_username_or_email": "Не получилось найти данное имя пользователя или электронную почту.",
+  "password_incorrect": "Неверный пароль.",
+  "registration_closed": "Регистрация закрыта",
+  "invalid_password": "Некорректный пароль. Пароль должен быть не длиннее 60 символов.",
+  "passwords_dont_match": "Пароли не совпадают.",
+  "captcha_incorrect": "Некорректная капча.",
+  "invalid_username": "Неверное имя пользователя.",
+  "bio_length_overflow": "Описание пользователя не может быть длиннее 300 символов.",
+  "couldnt_update_user": "Не получилось обновить пользователя.",
+  "couldnt_update_private_message": "Не удалось обновить личное сообщение.",
+  "couldnt_update_post": "Не получилось обновить запись",
+  "couldnt_create_private_message": "Не удалось создать личное сообщение.",
+  "no_private_message_edit_allowed": "Не разрешается редактировать личное сообщение."
 }
