--- a/lib/l10n/intl_sr_Latn.arb
+++ b/lib/l10n/intl_sr_Latn.arb
@@ -16,5 +16,7 @@
   "theme": "Tema",
   "language": "Jezik",
   "chat": "Ćaskanje",
-  "by": "od"
+  "by": "od",
+  "downvotes_disabled": "Onemogućite negativne glasove",
+  "registration_closed": "Zatvorena registracija"
 }
